# demo-rust-axum_code

./: Cargo.toml  README.md
src/: hello_from_sibling_file.html  main.rs
src/html/: hello_from_sub_dir.html
