[package]
name = "demo-rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# web framework
axum = "0.6.1"

# low-level http library
hyper = { version = "0.14.23", features = ["full"] }

# async framework
tokio = { version = "1.23.0", features = ["full"] }

# serialization framework
serde = { version = "1.0.150", features = ["derive"] }

# json serializer
serde_json = "1.0.89"